<resources>
    <string name="app_name">Photo Journal</string>
    <string name="photo_library">Photo Journal</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="already_have_account">ALREADY HAVE AN ACCOUNT?</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="signup">SIGNUP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="enter_email">Enter email…</string>
    <string name="enter_password">Enter password…</string>
    <string name="enter_full_name">Enter full name…</string>
    <string name="enter_description">Enter Description</string>
    <string name="choose_image">Choose Image</string>
    <string name="save">SAVE</string>
    <string name="screen_title">Screen Title</string>
    <string name="add_photo">+ ADD-PHOTO</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="empty_fields">Please fill in all fields</string>
    <string name="signup_success">Sign up successful!</string>
    <string name="signup_failed">Sign up failed. Please try again.</string>
    <string name="login_success">Login successful!</string>
    <string name="login_failed">Login failed. Please check your credentials.</string>
    <string name="photo_saved">Photo saved successfully!</string>
    <string name="photo_save_failed">Failed to save photo. Please try again.</string>
    <string name="select_image">Please select an image</string>
    <string name="weak_password">Password should be at least 6 characters</string>
    <string name="empty_gallery">Your gallery is empty. Tap + to add a photo.</string>
</resources>

